# Bot-Template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .env  .gitignore  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/core/: base.py  logging.py  scales_loader.py
{{ cookiecutter.project_slug }}/scales/: my_command.py  my_context_menu.py  my_event.py
